# mcp-vllm-delegator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile-vllm-delegator  LOGGING_ENHANCEMENTS.md  Quickstart_Guide.md  README.md  README.md.master  REBUILD_INSTRUCTIONS.md  Usage_Scenarios.md  build-and-deploy.sh  config.yaml  config.yaml.example  healthcheck.py  main.py  mcp_vllm_delegator.py  podman-compose-vllm.yml.disabled  pyproject.toml  reverse_string.py  test_delegator.py  test_tool_call.py  vllm_delegator.py  vllm_delegator_server.py
.roo/: mcp.json  mcp_settings_global.json  system-prompt-claude-architect  system-prompt-claude-code  system-prompt-roo-architect  system-prompt-roo-code
archive/: create_config_files.py  create_core_files.py  create_security_utils.py  create_tools_modules.py  setup_project_structure.py
config/: models.py  settings.py
context_portal/: context.db
context_portal/alembic/: env.py
context_portal/alembic/versions/: 2025_06_17_initial_schema.py
core/: cache.py.backup.1760210292  client.py  validation.py
core/core/: cache.py  client.py  metrics.py  validation.py  validation.py.backup.1760210805
docs/: DEPLOYMENT.md  README.md  README_CONTAINERIZATION.md  quickstart_guide.md  usage_scenarios.md
security/: utils.py
tools/: analysis_tools.py  base.py  code_tools.py  database_tools.py  generation_tools.py  git_tools.py  validation_tools.py
utils/: errors.py  logging.py
